debugging and renamed main programs to N2TME, S2TME

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -60,28 +60,28 @@ all: tests
 sources: ccs headers
 	chmod a+r *.h *.cc
 
-ccs: cubic_utils.cc TME.cc cubic_forms_support.cc cubic_forms_support.cc
+ccs: cubic_utils.cc TME.cc S2TME.cc S2TME.cc
 
 headers: cubic_utils.h TME.h
 
 %.o:   %.cc
 	$(CC) $(CFLAGS) $<
 
-TESTS = cubic_forms_conductor cubic_forms_support
+TESTS = N2TME S2TME
 tests: $(TESTS)
 
 clean:
 	rm -f $(TESTS)
 	rm -f *.o *~
 
-cubic_forms_conductor: cubic_forms_conductor.o cubic_utils.o TME.o
-	$(CC) -o cubic_forms_conductor cubic_forms_conductor.o cubic_utils.o TME.o $(LFLAGS)
+N2TME: N2TME.o cubic_utils.o TME.o
+	$(CC) -o N2TME N2TME.o cubic_utils.o TME.o $(LFLAGS)
 
-cubic_forms_support: cubic_forms_support.o cubic_utils.o
-	$(CC) -o cubic_forms_support cubic_forms_support.o cubic_utils.o $(LFLAGS)
+S2TME: S2TME.o cubic_utils.o
+	$(CC) -o S2TME S2TME.o cubic_utils.o $(LFLAGS)
 
-cubic_forms_conductor.o: cubic_forms_conductor.cc cubic_utils.h TME.h
-cubic_forms_support.o: cubic_forms_support.cc cubic_utils.h
+N2TME.o: N2TME.cc cubic_utils.h TME.h
+S2TME.o: S2TME.cc cubic_utils.h
 cubic_utils.o: cubic_utils.h cubic_utils.cc
 TME.o: cubic_utils.h TME.h
 
