--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,35 +1,22 @@
 # Makefile for programs for Bennett-Gherga-Rechnitzer algorithm
 
-# eclib is a requirement.  If installed in the usual place /usr/local
-# the following line might not be necessary.  If installed anywhere
-# else set the install directory here:
+# eclib is a requirement.  Define ECLIB_BASE to be the installation
+# directory, for example (if installed in the usual place) /usr/local,
+# or if installed anywhere else set the install directory here:
 
-ECLIB_BASE=/usr/local
-#ECLIB_BASE=$(HOME)/eclib
+#ECLIB_BASE=/usr/local
+ECLIB_BASE=$(HOME)/eclib
 INCDIR = $(ECLIB_BASE)/include
 LIBDIR = $(ECLIB_BASE)/lib
 
 GCC=g++ -std=c++11 -fmax-errors=1
 CC = $(GCC)
 
-
-# The type of integers used for components of Quad, Qideal, RatQuad
-# can be either long or bigint (=NTL's ZZ), and is typedef'd to QUINT
-# in the code.  By default the type is long and QUINT_IS_long is
-# defined; this can result in overflow for large levels over larger
-# fields.  Change this to 1 (and make clean and rebuild) to compile
-# using ZZ as base integer type for Quads instead.  That results in
-# slower code, but it does not overflow!
-BASE_TYPE_ZZ=0
-ifeq ($(BASE_TYPE_ZZ), 1)
- BASE_TYPE_FLAG = -D QUINT_IS_ZZ
-endif
-
 # NB If used with a multithreaded build of eclib then you MUST define
 # USE_BOOST=1 below so that the correct compiler and linker stuff is
 # appended below.  Otherwise set USE_BOOST=0 (or do not set it).
 
-USE_BOOST=1
+USE_BOOST=0
 ifeq ($(USE_BOOST), 1)
  BOOST_ASIO_LIB = -lboost_system-mt
  BOOST_CPPFLAGS =   -DECLIB_MULTITHREAD -DHAVE_STDCXX_0X=/\*\*/ -DHAVE_TR1_UNORDERED_MAP=/\*\*/ -DHAVE_STDCXX_0X=/\*\*/ -DHAVE_UNORDERED_MAP=/\*\*/# -pthread -I/usr/include
@@ -43,16 +30,7 @@ endif
 # to enable checking of assert() use the following:
 OPTFLAG = -O3 -Wall -fPIC
 
-# for profiling:
-#CFLAGS = -c -g -pg $(OPTFLAG) $(BOOST_CPPFLAGS) $(BASE_TYPE_FLAG) -I$(INCDIR)
-#LFLAGS = -pg -lec -lntl -lstdc++  -L$(LIBDIR) -Wl,-rpath -Wl,$(LIBDIR) $(BOOST_LDFLAGS)
-
-#for coverage:
-#CFLAGS = -c -g --coverage $(BOOST_CPPFLAGS) $(BASE_TYPE_FLAG) -I$(INCDIR)
-#LFLAGS = --coverage -fprofile-arcs -lec -lntl -lstdc++  -L$(LIBDIR) -Wl,-rpath -Wl,$(LIBDIR) $(BOOST_LDFLAGS)
-
-#for normal use:
-CFLAGS = -c -g $(OPTFLAG) $(BOOST_CPPFLAGS) $(BASE_TYPE_FLAG) -I$(INCDIR)
+CFLAGS = -c -g $(OPTFLAG) $(BOOST_CPPFLAGS) -I$(INCDIR)
 LFLAGS = -lec -lntl -lstdc++  -L$(LIBDIR) -Wl,-rpath -Wl,$(LIBDIR) $(BOOST_LDFLAGS)
 
 all: tests
@@ -60,14 +38,14 @@ all: tests
 sources: ccs headers
 	chmod a+r *.h *.cc
 
-ccs: cubic_utils.cc TME.cc N2TME.cc S2TME.cc TME_compare.cc
+ccs: cubic_utils.cc TME.cc N2TME.cc TME_compare.cc# S2TME.cc
 
 headers: cubic_utils.h TME.h
 
 %.o:   %.cc
 	$(CC) $(CFLAGS) $<
 
-TESTS = N2TME S2TME TME_compare
+TESTS = N2TME TME_compare# S2TME
 tests: $(TESTS)
 
 clean:
